# CloudflareSpeedtest-Slave

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflow/: build.yaml
.github/workflows/: build.yaml  linux.yaml  rust.yml  windows.yaml
idl/: cfst_rpc.proto  nohup.out  tmp.sh
proto/: cfst_rpc.proto  cfst_rpc.rs
src/: args.rs  cfst_rpc.rs  install_upgrade.rs  lib.rs  main.rs  ping.rs  return_default.rs  server_comm.rs  speed.rs
tls_cert/: server.key  server.pem
volo-gen/: Cargo.toml  volo.yml
volo-gen/src/: lib.rs
