[package]
name = "CloudflareSpeedtest-Slave"
version = "1.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
fastping-rs = "0.2.4"
ipnetwork = "0.20.0"
log = "0.4.22"
native-tls = "0.2.12"
prost = "0.12.6"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-build = "0.11.0"
url = "2.5.2"
uuid = { version = "1.9.1", features = [ "v4" ] }

[build-dependencies]
tonic-build = "0.11.0"
